styles/menuBar768.css
/*
For screens 768px and less
*/
@media (max-width: 768px) {

    * {
        box-sizing: border-box;
    }

    .header {
        position: sticky;
        top: 0;
        z-index: 1000;
        background: #000000;
    }

    /* =========================
        LOGO SECTION
        ========================= */
    .logo-container {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 7px;
        padding-bottom: 2px;
    }

    .logo {
        height: 60px;
        object-fit: contain;
        margin-top: -5px;
    }

    /* =========================
        NAVBAR
        ========================= */
    .navbar_mobile {
        border-top: 1px solid rgba(255, 255, 255, 0.15);
        padding: 3px;
        margin-top: -5px;
        display: block;
    }

    .navbar_desktop {
        display: none;
    }

    /* MENU */
    .nav-menu {
        list-style: none;
        display: flex;
        flex-wrap: nowrap; /* force single row */  
        overflow-x: auto;      /* allows safe scrolling if needed */     
        justify-content: center;
        align-items: center;
        gap: 3px;
        padding: 0 10px;
        padding-left: -5px;
    }

    /* LINKS */
    .nav-menu a, span {
        color: white;
        text-decoration: none;
        font-size: 14px;
        letter-spacing: 1px;
        padding: 6px 10px;
        border-radius: 4px;
        transition: all 0.2s ease;
        font-family: 'Lato', serif;
    }

    /* HOVER */
    .nav-menu a:hover {
        background: white;
        color: #0b3c5d;
    }

    /* =========================
        LANGUAGE SECTION
        ========================= */
    .language {
        display: flex;
        align-items: center;
        gap: 6px;
        color: white;
        font-size: 13px;
        margin-left: 3px;
    }

    #menu-language {
        display: flex;
        align-items: right;
        gap: 0px;
        padding: 0;
        margin-left: -5px;
        margin-right: 0;
    }

    .language span {
        opacity: 0.8;
    }

    .language a {
        padding: 4px 4px;
    }

    .language-flag {
        height: 15px;
        width: auto;
    }


}

